PLY/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID ENDL programPrima
Rule 2     programPrima -> body END
Rule 3     programPrima -> vars body END
Rule 4     vars -> VAR ID idPrima
Rule 5     idPrima -> COMA ID idPrima
Rule 6     idPrima -> COLON type
Rule 7     idPrima2 -> ID idPrima
Rule 8     varsPrima -> <empty>
Rule 9     varsPrima -> idPrima2
Rule 10    type -> INT ENDL varsPrima
Rule 11    type -> FLOAT ENDL varsPrima
Rule 12    body -> OPENK bodyPrima CLOSEK
Rule 13    bodyPrima -> <empty>
Rule 14    bodyPrima -> statement bodyPrima
Rule 15    statement -> assign
Rule 16    statement -> condition
Rule 17    statement -> cycle
Rule 18    statement -> print
Rule 19    print -> COUT OPENP printPrima
Rule 20    printPrima -> expresion expresionPrima
Rule 21    printPrima -> CTESTRING expresionPrima
Rule 22    expresionPrima -> COMA printPrima
Rule 23    expresionPrima -> CLOSEP ENDL
Rule 24    assign -> ID EQUAL expresion ENDL
Rule 25    cycle -> DO body WHILE OPENP expresion CLOSEP ENDL
Rule 26    expresion -> exp expresionPrima2
Rule 27    expresionPrima2 -> <empty>
Rule 28    expresionPrima2 -> GREATER exp
Rule 29    expresionPrima2 -> LESS exp
Rule 30    expresionPrima2 -> ISNOT exp
Rule 31    condition -> IF OPENP expresion CLOSEP body conditionPrima
Rule 32    conditionPrima -> ELSE body ENDL
Rule 33    conditionPrima -> ENDL
Rule 34    factor -> factorPrima
Rule 35    factorPrima -> OPENP expresion CLOSEP
Rule 36    factorPrima -> factorPrima2
Rule 37    factorPrima -> PLUS factorPrima2
Rule 38    factorPrima -> MINUS factorPrima2
Rule 39    factorPrima2 -> ID
Rule 40    factorPrima2 -> cte
Rule 41    cte -> CTEINT
Rule 42    cte -> CTEFLOAT
Rule 43    exp -> expPrima
Rule 44    expPrima -> termino PLUS exp
Rule 45    expPrima -> termino MINUS exp
Rule 46    expPrima -> termino
Rule 47    termino -> terminoPrima
Rule 48    terminoPrima -> factor MULTIPLY termino
Rule 49    terminoPrima -> factor DIVIDE termino
Rule 50    terminoPrima -> factor

Terminals, with rules where they appear

CLOSEK               : 12
CLOSEP               : 23 25 31 35
COLON                : 6
COMA                 : 5 22
COUT                 : 19
CTEFLOAT             : 42
CTEINT               : 41
CTESTRING            : 21
DIVIDE               : 49
DO                   : 25
ELSE                 : 32
END                  : 2 3
ENDL                 : 1 10 11 23 24 25 32 33
EQUAL                : 24
FLOAT                : 11
GREATER              : 28
ID                   : 1 4 5 7 24 39
IF                   : 31
INT                  : 10
ISNOT                : 30
LESS                 : 29
MINUS                : 38 45
MULTIPLY             : 48
OPENK                : 12
OPENP                : 19 25 31 35
PLUS                 : 37 44
PROGRAM              : 1
VAR                  : 4
WHILE                : 25
error                : 

Nonterminals, with rules where they appear

assign               : 15
body                 : 2 3 25 31 32
bodyPrima            : 12 14
condition            : 16
conditionPrima       : 31
cte                  : 40
cycle                : 17
exp                  : 26 28 29 30 44 45
expPrima             : 43
expresion            : 20 24 25 31 35
expresionPrima       : 20 21
expresionPrima2      : 26
factor               : 48 49 50
factorPrima          : 34
factorPrima2         : 36 37 38
idPrima              : 4 5 7
idPrima2             : 9
print                : 18
printPrima           : 19 22
program              : 0
programPrima         : 1
statement            : 14
termino              : 44 45 46 48 49
terminoPrima         : 47
type                 : 6
vars                 : 3
varsPrima            : 10 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID ENDL programPrima

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID ENDL programPrima

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . ENDL programPrima

    ENDL            shift and go to state 4


state 4

    (1) program -> PROGRAM ID ENDL . programPrima
    (2) programPrima -> . body END
    (3) programPrima -> . vars body END
    (12) body -> . OPENK bodyPrima CLOSEK
    (4) vars -> . VAR ID idPrima

    OPENK           shift and go to state 8
    VAR             shift and go to state 9

    programPrima                   shift and go to state 5
    body                           shift and go to state 6
    vars                           shift and go to state 7

state 5

    (1) program -> PROGRAM ID ENDL programPrima .

    $end            reduce using rule 1 (program -> PROGRAM ID ENDL programPrima .)


state 6

    (2) programPrima -> body . END

    END             shift and go to state 10


state 7

    (3) programPrima -> vars . body END
    (12) body -> . OPENK bodyPrima CLOSEK

    OPENK           shift and go to state 8

    body                           shift and go to state 11

state 8

    (12) body -> OPENK . bodyPrima CLOSEK
    (13) bodyPrima -> .
    (14) bodyPrima -> . statement bodyPrima
    (15) statement -> . assign
    (16) statement -> . condition
    (17) statement -> . cycle
    (18) statement -> . print
    (24) assign -> . ID EQUAL expresion ENDL
    (31) condition -> . IF OPENP expresion CLOSEP body conditionPrima
    (25) cycle -> . DO body WHILE OPENP expresion CLOSEP ENDL
    (19) print -> . COUT OPENP printPrima

    CLOSEK          reduce using rule 13 (bodyPrima -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    DO              shift and go to state 20
    COUT            shift and go to state 21

    bodyPrima                      shift and go to state 12
    statement                      shift and go to state 13
    assign                         shift and go to state 14
    condition                      shift and go to state 15
    cycle                          shift and go to state 16
    print                          shift and go to state 17

state 9

    (4) vars -> VAR . ID idPrima

    ID              shift and go to state 22


state 10

    (2) programPrima -> body END .

    $end            reduce using rule 2 (programPrima -> body END .)


state 11

    (3) programPrima -> vars body . END

    END             shift and go to state 23


state 12

    (12) body -> OPENK bodyPrima . CLOSEK

    CLOSEK          shift and go to state 24


state 13

    (14) bodyPrima -> statement . bodyPrima
    (13) bodyPrima -> .
    (14) bodyPrima -> . statement bodyPrima
    (15) statement -> . assign
    (16) statement -> . condition
    (17) statement -> . cycle
    (18) statement -> . print
    (24) assign -> . ID EQUAL expresion ENDL
    (31) condition -> . IF OPENP expresion CLOSEP body conditionPrima
    (25) cycle -> . DO body WHILE OPENP expresion CLOSEP ENDL
    (19) print -> . COUT OPENP printPrima

    CLOSEK          reduce using rule 13 (bodyPrima -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    DO              shift and go to state 20
    COUT            shift and go to state 21

    statement                      shift and go to state 13
    bodyPrima                      shift and go to state 25
    assign                         shift and go to state 14
    condition                      shift and go to state 15
    cycle                          shift and go to state 16
    print                          shift and go to state 17

state 14

    (15) statement -> assign .

    ID              reduce using rule 15 (statement -> assign .)
    IF              reduce using rule 15 (statement -> assign .)
    DO              reduce using rule 15 (statement -> assign .)
    COUT            reduce using rule 15 (statement -> assign .)
    CLOSEK          reduce using rule 15 (statement -> assign .)


state 15

    (16) statement -> condition .

    ID              reduce using rule 16 (statement -> condition .)
    IF              reduce using rule 16 (statement -> condition .)
    DO              reduce using rule 16 (statement -> condition .)
    COUT            reduce using rule 16 (statement -> condition .)
    CLOSEK          reduce using rule 16 (statement -> condition .)


state 16

    (17) statement -> cycle .

    ID              reduce using rule 17 (statement -> cycle .)
    IF              reduce using rule 17 (statement -> cycle .)
    DO              reduce using rule 17 (statement -> cycle .)
    COUT            reduce using rule 17 (statement -> cycle .)
    CLOSEK          reduce using rule 17 (statement -> cycle .)


state 17

    (18) statement -> print .

    ID              reduce using rule 18 (statement -> print .)
    IF              reduce using rule 18 (statement -> print .)
    DO              reduce using rule 18 (statement -> print .)
    COUT            reduce using rule 18 (statement -> print .)
    CLOSEK          reduce using rule 18 (statement -> print .)


state 18

    (24) assign -> ID . EQUAL expresion ENDL

    EQUAL           shift and go to state 26


state 19

    (31) condition -> IF . OPENP expresion CLOSEP body conditionPrima

    OPENP           shift and go to state 27


state 20

    (25) cycle -> DO . body WHILE OPENP expresion CLOSEP ENDL
    (12) body -> . OPENK bodyPrima CLOSEK

    OPENK           shift and go to state 8

    body                           shift and go to state 28

state 21

    (19) print -> COUT . OPENP printPrima

    OPENP           shift and go to state 29


state 22

    (4) vars -> VAR ID . idPrima
    (5) idPrima -> . COMA ID idPrima
    (6) idPrima -> . COLON type

    COMA            shift and go to state 31
    COLON           shift and go to state 32

    idPrima                        shift and go to state 30

state 23

    (3) programPrima -> vars body END .

    $end            reduce using rule 3 (programPrima -> vars body END .)


state 24

    (12) body -> OPENK bodyPrima CLOSEK .

    END             reduce using rule 12 (body -> OPENK bodyPrima CLOSEK .)
    WHILE           reduce using rule 12 (body -> OPENK bodyPrima CLOSEK .)
    ELSE            reduce using rule 12 (body -> OPENK bodyPrima CLOSEK .)
    ENDL            reduce using rule 12 (body -> OPENK bodyPrima CLOSEK .)


state 25

    (14) bodyPrima -> statement bodyPrima .

    CLOSEK          reduce using rule 14 (bodyPrima -> statement bodyPrima .)


state 26

    (24) assign -> ID EQUAL . expresion ENDL
    (26) expresion -> . exp expresionPrima2
    (43) exp -> . expPrima
    (44) expPrima -> . termino PLUS exp
    (45) expPrima -> . termino MINUS exp
    (46) expPrima -> . termino
    (47) termino -> . terminoPrima
    (48) terminoPrima -> . factor MULTIPLY termino
    (49) terminoPrima -> . factor DIVIDE termino
    (50) terminoPrima -> . factor
    (34) factor -> . factorPrima
    (35) factorPrima -> . OPENP expresion CLOSEP
    (36) factorPrima -> . factorPrima2
    (37) factorPrima -> . PLUS factorPrima2
    (38) factorPrima -> . MINUS factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    OPENP           shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    expresion                      shift and go to state 34
    exp                            shift and go to state 35
    expPrima                       shift and go to state 36
    termino                        shift and go to state 37
    terminoPrima                   shift and go to state 40
    factor                         shift and go to state 41
    factorPrima                    shift and go to state 42
    factorPrima2                   shift and go to state 44
    cte                            shift and go to state 45

state 27

    (31) condition -> IF OPENP . expresion CLOSEP body conditionPrima
    (26) expresion -> . exp expresionPrima2
    (43) exp -> . expPrima
    (44) expPrima -> . termino PLUS exp
    (45) expPrima -> . termino MINUS exp
    (46) expPrima -> . termino
    (47) termino -> . terminoPrima
    (48) terminoPrima -> . factor MULTIPLY termino
    (49) terminoPrima -> . factor DIVIDE termino
    (50) terminoPrima -> . factor
    (34) factor -> . factorPrima
    (35) factorPrima -> . OPENP expresion CLOSEP
    (36) factorPrima -> . factorPrima2
    (37) factorPrima -> . PLUS factorPrima2
    (38) factorPrima -> . MINUS factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    OPENP           shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    expresion                      shift and go to state 48
    exp                            shift and go to state 35
    expPrima                       shift and go to state 36
    termino                        shift and go to state 37
    terminoPrima                   shift and go to state 40
    factor                         shift and go to state 41
    factorPrima                    shift and go to state 42
    factorPrima2                   shift and go to state 44
    cte                            shift and go to state 45

state 28

    (25) cycle -> DO body . WHILE OPENP expresion CLOSEP ENDL

    WHILE           shift and go to state 49


state 29

    (19) print -> COUT OPENP . printPrima
    (20) printPrima -> . expresion expresionPrima
    (21) printPrima -> . CTESTRING expresionPrima
    (26) expresion -> . exp expresionPrima2
    (43) exp -> . expPrima
    (44) expPrima -> . termino PLUS exp
    (45) expPrima -> . termino MINUS exp
    (46) expPrima -> . termino
    (47) termino -> . terminoPrima
    (48) terminoPrima -> . factor MULTIPLY termino
    (49) terminoPrima -> . factor DIVIDE termino
    (50) terminoPrima -> . factor
    (34) factor -> . factorPrima
    (35) factorPrima -> . OPENP expresion CLOSEP
    (36) factorPrima -> . factorPrima2
    (37) factorPrima -> . PLUS factorPrima2
    (38) factorPrima -> . MINUS factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    CTESTRING       shift and go to state 52
    OPENP           shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    printPrima                     shift and go to state 50
    expresion                      shift and go to state 51
    exp                            shift and go to state 35
    expPrima                       shift and go to state 36
    termino                        shift and go to state 37
    terminoPrima                   shift and go to state 40
    factor                         shift and go to state 41
    factorPrima                    shift and go to state 42
    factorPrima2                   shift and go to state 44
    cte                            shift and go to state 45

state 30

    (4) vars -> VAR ID idPrima .

    OPENK           reduce using rule 4 (vars -> VAR ID idPrima .)


state 31

    (5) idPrima -> COMA . ID idPrima

    ID              shift and go to state 53


state 32

    (6) idPrima -> COLON . type
    (10) type -> . INT ENDL varsPrima
    (11) type -> . FLOAT ENDL varsPrima

    INT             shift and go to state 55
    FLOAT           shift and go to state 56

    type                           shift and go to state 54

state 33

    (39) factorPrima2 -> ID .

    MULTIPLY        reduce using rule 39 (factorPrima2 -> ID .)
    DIVIDE          reduce using rule 39 (factorPrima2 -> ID .)
    PLUS            reduce using rule 39 (factorPrima2 -> ID .)
    MINUS           reduce using rule 39 (factorPrima2 -> ID .)
    GREATER         reduce using rule 39 (factorPrima2 -> ID .)
    LESS            reduce using rule 39 (factorPrima2 -> ID .)
    ISNOT           reduce using rule 39 (factorPrima2 -> ID .)
    ENDL            reduce using rule 39 (factorPrima2 -> ID .)
    CLOSEP          reduce using rule 39 (factorPrima2 -> ID .)
    COMA            reduce using rule 39 (factorPrima2 -> ID .)


state 34

    (24) assign -> ID EQUAL expresion . ENDL

    ENDL            shift and go to state 57


state 35

    (26) expresion -> exp . expresionPrima2
    (27) expresionPrima2 -> .
    (28) expresionPrima2 -> . GREATER exp
    (29) expresionPrima2 -> . LESS exp
    (30) expresionPrima2 -> . ISNOT exp

    ENDL            reduce using rule 27 (expresionPrima2 -> .)
    CLOSEP          reduce using rule 27 (expresionPrima2 -> .)
    COMA            reduce using rule 27 (expresionPrima2 -> .)
    GREATER         shift and go to state 59
    LESS            shift and go to state 60
    ISNOT           shift and go to state 61

    expresionPrima2                shift and go to state 58

state 36

    (43) exp -> expPrima .

    GREATER         reduce using rule 43 (exp -> expPrima .)
    LESS            reduce using rule 43 (exp -> expPrima .)
    ISNOT           reduce using rule 43 (exp -> expPrima .)
    ENDL            reduce using rule 43 (exp -> expPrima .)
    CLOSEP          reduce using rule 43 (exp -> expPrima .)
    COMA            reduce using rule 43 (exp -> expPrima .)


state 37

    (44) expPrima -> termino . PLUS exp
    (45) expPrima -> termino . MINUS exp
    (46) expPrima -> termino .

    PLUS            shift and go to state 62
    MINUS           shift and go to state 63
    GREATER         reduce using rule 46 (expPrima -> termino .)
    LESS            reduce using rule 46 (expPrima -> termino .)
    ISNOT           reduce using rule 46 (expPrima -> termino .)
    ENDL            reduce using rule 46 (expPrima -> termino .)
    CLOSEP          reduce using rule 46 (expPrima -> termino .)
    COMA            reduce using rule 46 (expPrima -> termino .)


state 38

    (37) factorPrima -> PLUS . factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    factorPrima2                   shift and go to state 64
    cte                            shift and go to state 45

state 39

    (38) factorPrima -> MINUS . factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    factorPrima2                   shift and go to state 65
    cte                            shift and go to state 45

state 40

    (47) termino -> terminoPrima .

    PLUS            reduce using rule 47 (termino -> terminoPrima .)
    MINUS           reduce using rule 47 (termino -> terminoPrima .)
    GREATER         reduce using rule 47 (termino -> terminoPrima .)
    LESS            reduce using rule 47 (termino -> terminoPrima .)
    ISNOT           reduce using rule 47 (termino -> terminoPrima .)
    ENDL            reduce using rule 47 (termino -> terminoPrima .)
    CLOSEP          reduce using rule 47 (termino -> terminoPrima .)
    COMA            reduce using rule 47 (termino -> terminoPrima .)


state 41

    (48) terminoPrima -> factor . MULTIPLY termino
    (49) terminoPrima -> factor . DIVIDE termino
    (50) terminoPrima -> factor .

    MULTIPLY        shift and go to state 66
    DIVIDE          shift and go to state 67
    PLUS            reduce using rule 50 (terminoPrima -> factor .)
    MINUS           reduce using rule 50 (terminoPrima -> factor .)
    GREATER         reduce using rule 50 (terminoPrima -> factor .)
    LESS            reduce using rule 50 (terminoPrima -> factor .)
    ISNOT           reduce using rule 50 (terminoPrima -> factor .)
    ENDL            reduce using rule 50 (terminoPrima -> factor .)
    CLOSEP          reduce using rule 50 (terminoPrima -> factor .)
    COMA            reduce using rule 50 (terminoPrima -> factor .)


state 42

    (34) factor -> factorPrima .

    MULTIPLY        reduce using rule 34 (factor -> factorPrima .)
    DIVIDE          reduce using rule 34 (factor -> factorPrima .)
    PLUS            reduce using rule 34 (factor -> factorPrima .)
    MINUS           reduce using rule 34 (factor -> factorPrima .)
    GREATER         reduce using rule 34 (factor -> factorPrima .)
    LESS            reduce using rule 34 (factor -> factorPrima .)
    ISNOT           reduce using rule 34 (factor -> factorPrima .)
    ENDL            reduce using rule 34 (factor -> factorPrima .)
    CLOSEP          reduce using rule 34 (factor -> factorPrima .)
    COMA            reduce using rule 34 (factor -> factorPrima .)


state 43

    (35) factorPrima -> OPENP . expresion CLOSEP
    (26) expresion -> . exp expresionPrima2
    (43) exp -> . expPrima
    (44) expPrima -> . termino PLUS exp
    (45) expPrima -> . termino MINUS exp
    (46) expPrima -> . termino
    (47) termino -> . terminoPrima
    (48) terminoPrima -> . factor MULTIPLY termino
    (49) terminoPrima -> . factor DIVIDE termino
    (50) terminoPrima -> . factor
    (34) factor -> . factorPrima
    (35) factorPrima -> . OPENP expresion CLOSEP
    (36) factorPrima -> . factorPrima2
    (37) factorPrima -> . PLUS factorPrima2
    (38) factorPrima -> . MINUS factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    OPENP           shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    expresion                      shift and go to state 68
    exp                            shift and go to state 35
    expPrima                       shift and go to state 36
    termino                        shift and go to state 37
    terminoPrima                   shift and go to state 40
    factor                         shift and go to state 41
    factorPrima                    shift and go to state 42
    factorPrima2                   shift and go to state 44
    cte                            shift and go to state 45

state 44

    (36) factorPrima -> factorPrima2 .

    MULTIPLY        reduce using rule 36 (factorPrima -> factorPrima2 .)
    DIVIDE          reduce using rule 36 (factorPrima -> factorPrima2 .)
    PLUS            reduce using rule 36 (factorPrima -> factorPrima2 .)
    MINUS           reduce using rule 36 (factorPrima -> factorPrima2 .)
    GREATER         reduce using rule 36 (factorPrima -> factorPrima2 .)
    LESS            reduce using rule 36 (factorPrima -> factorPrima2 .)
    ISNOT           reduce using rule 36 (factorPrima -> factorPrima2 .)
    ENDL            reduce using rule 36 (factorPrima -> factorPrima2 .)
    CLOSEP          reduce using rule 36 (factorPrima -> factorPrima2 .)
    COMA            reduce using rule 36 (factorPrima -> factorPrima2 .)


state 45

    (40) factorPrima2 -> cte .

    MULTIPLY        reduce using rule 40 (factorPrima2 -> cte .)
    DIVIDE          reduce using rule 40 (factorPrima2 -> cte .)
    PLUS            reduce using rule 40 (factorPrima2 -> cte .)
    MINUS           reduce using rule 40 (factorPrima2 -> cte .)
    GREATER         reduce using rule 40 (factorPrima2 -> cte .)
    LESS            reduce using rule 40 (factorPrima2 -> cte .)
    ISNOT           reduce using rule 40 (factorPrima2 -> cte .)
    ENDL            reduce using rule 40 (factorPrima2 -> cte .)
    CLOSEP          reduce using rule 40 (factorPrima2 -> cte .)
    COMA            reduce using rule 40 (factorPrima2 -> cte .)


state 46

    (41) cte -> CTEINT .

    MULTIPLY        reduce using rule 41 (cte -> CTEINT .)
    DIVIDE          reduce using rule 41 (cte -> CTEINT .)
    PLUS            reduce using rule 41 (cte -> CTEINT .)
    MINUS           reduce using rule 41 (cte -> CTEINT .)
    GREATER         reduce using rule 41 (cte -> CTEINT .)
    LESS            reduce using rule 41 (cte -> CTEINT .)
    ISNOT           reduce using rule 41 (cte -> CTEINT .)
    ENDL            reduce using rule 41 (cte -> CTEINT .)
    CLOSEP          reduce using rule 41 (cte -> CTEINT .)
    COMA            reduce using rule 41 (cte -> CTEINT .)


state 47

    (42) cte -> CTEFLOAT .

    MULTIPLY        reduce using rule 42 (cte -> CTEFLOAT .)
    DIVIDE          reduce using rule 42 (cte -> CTEFLOAT .)
    PLUS            reduce using rule 42 (cte -> CTEFLOAT .)
    MINUS           reduce using rule 42 (cte -> CTEFLOAT .)
    GREATER         reduce using rule 42 (cte -> CTEFLOAT .)
    LESS            reduce using rule 42 (cte -> CTEFLOAT .)
    ISNOT           reduce using rule 42 (cte -> CTEFLOAT .)
    ENDL            reduce using rule 42 (cte -> CTEFLOAT .)
    CLOSEP          reduce using rule 42 (cte -> CTEFLOAT .)
    COMA            reduce using rule 42 (cte -> CTEFLOAT .)


state 48

    (31) condition -> IF OPENP expresion . CLOSEP body conditionPrima

    CLOSEP          shift and go to state 69


state 49

    (25) cycle -> DO body WHILE . OPENP expresion CLOSEP ENDL

    OPENP           shift and go to state 70


state 50

    (19) print -> COUT OPENP printPrima .

    ID              reduce using rule 19 (print -> COUT OPENP printPrima .)
    IF              reduce using rule 19 (print -> COUT OPENP printPrima .)
    DO              reduce using rule 19 (print -> COUT OPENP printPrima .)
    COUT            reduce using rule 19 (print -> COUT OPENP printPrima .)
    CLOSEK          reduce using rule 19 (print -> COUT OPENP printPrima .)


state 51

    (20) printPrima -> expresion . expresionPrima
    (22) expresionPrima -> . COMA printPrima
    (23) expresionPrima -> . CLOSEP ENDL

    COMA            shift and go to state 72
    CLOSEP          shift and go to state 73

    expresionPrima                 shift and go to state 71

state 52

    (21) printPrima -> CTESTRING . expresionPrima
    (22) expresionPrima -> . COMA printPrima
    (23) expresionPrima -> . CLOSEP ENDL

    COMA            shift and go to state 72
    CLOSEP          shift and go to state 73

    expresionPrima                 shift and go to state 74

state 53

    (5) idPrima -> COMA ID . idPrima
    (5) idPrima -> . COMA ID idPrima
    (6) idPrima -> . COLON type

    COMA            shift and go to state 31
    COLON           shift and go to state 32

    idPrima                        shift and go to state 75

state 54

    (6) idPrima -> COLON type .

    OPENK           reduce using rule 6 (idPrima -> COLON type .)


state 55

    (10) type -> INT . ENDL varsPrima

    ENDL            shift and go to state 76


state 56

    (11) type -> FLOAT . ENDL varsPrima

    ENDL            shift and go to state 77


state 57

    (24) assign -> ID EQUAL expresion ENDL .

    ID              reduce using rule 24 (assign -> ID EQUAL expresion ENDL .)
    IF              reduce using rule 24 (assign -> ID EQUAL expresion ENDL .)
    DO              reduce using rule 24 (assign -> ID EQUAL expresion ENDL .)
    COUT            reduce using rule 24 (assign -> ID EQUAL expresion ENDL .)
    CLOSEK          reduce using rule 24 (assign -> ID EQUAL expresion ENDL .)


state 58

    (26) expresion -> exp expresionPrima2 .

    ENDL            reduce using rule 26 (expresion -> exp expresionPrima2 .)
    CLOSEP          reduce using rule 26 (expresion -> exp expresionPrima2 .)
    COMA            reduce using rule 26 (expresion -> exp expresionPrima2 .)


state 59

    (28) expresionPrima2 -> GREATER . exp
    (43) exp -> . expPrima
    (44) expPrima -> . termino PLUS exp
    (45) expPrima -> . termino MINUS exp
    (46) expPrima -> . termino
    (47) termino -> . terminoPrima
    (48) terminoPrima -> . factor MULTIPLY termino
    (49) terminoPrima -> . factor DIVIDE termino
    (50) terminoPrima -> . factor
    (34) factor -> . factorPrima
    (35) factorPrima -> . OPENP expresion CLOSEP
    (36) factorPrima -> . factorPrima2
    (37) factorPrima -> . PLUS factorPrima2
    (38) factorPrima -> . MINUS factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    OPENP           shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    exp                            shift and go to state 78
    expPrima                       shift and go to state 36
    termino                        shift and go to state 37
    terminoPrima                   shift and go to state 40
    factor                         shift and go to state 41
    factorPrima                    shift and go to state 42
    factorPrima2                   shift and go to state 44
    cte                            shift and go to state 45

state 60

    (29) expresionPrima2 -> LESS . exp
    (43) exp -> . expPrima
    (44) expPrima -> . termino PLUS exp
    (45) expPrima -> . termino MINUS exp
    (46) expPrima -> . termino
    (47) termino -> . terminoPrima
    (48) terminoPrima -> . factor MULTIPLY termino
    (49) terminoPrima -> . factor DIVIDE termino
    (50) terminoPrima -> . factor
    (34) factor -> . factorPrima
    (35) factorPrima -> . OPENP expresion CLOSEP
    (36) factorPrima -> . factorPrima2
    (37) factorPrima -> . PLUS factorPrima2
    (38) factorPrima -> . MINUS factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    OPENP           shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    exp                            shift and go to state 79
    expPrima                       shift and go to state 36
    termino                        shift and go to state 37
    terminoPrima                   shift and go to state 40
    factor                         shift and go to state 41
    factorPrima                    shift and go to state 42
    factorPrima2                   shift and go to state 44
    cte                            shift and go to state 45

state 61

    (30) expresionPrima2 -> ISNOT . exp
    (43) exp -> . expPrima
    (44) expPrima -> . termino PLUS exp
    (45) expPrima -> . termino MINUS exp
    (46) expPrima -> . termino
    (47) termino -> . terminoPrima
    (48) terminoPrima -> . factor MULTIPLY termino
    (49) terminoPrima -> . factor DIVIDE termino
    (50) terminoPrima -> . factor
    (34) factor -> . factorPrima
    (35) factorPrima -> . OPENP expresion CLOSEP
    (36) factorPrima -> . factorPrima2
    (37) factorPrima -> . PLUS factorPrima2
    (38) factorPrima -> . MINUS factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    OPENP           shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    exp                            shift and go to state 80
    expPrima                       shift and go to state 36
    termino                        shift and go to state 37
    terminoPrima                   shift and go to state 40
    factor                         shift and go to state 41
    factorPrima                    shift and go to state 42
    factorPrima2                   shift and go to state 44
    cte                            shift and go to state 45

state 62

    (44) expPrima -> termino PLUS . exp
    (43) exp -> . expPrima
    (44) expPrima -> . termino PLUS exp
    (45) expPrima -> . termino MINUS exp
    (46) expPrima -> . termino
    (47) termino -> . terminoPrima
    (48) terminoPrima -> . factor MULTIPLY termino
    (49) terminoPrima -> . factor DIVIDE termino
    (50) terminoPrima -> . factor
    (34) factor -> . factorPrima
    (35) factorPrima -> . OPENP expresion CLOSEP
    (36) factorPrima -> . factorPrima2
    (37) factorPrima -> . PLUS factorPrima2
    (38) factorPrima -> . MINUS factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    OPENP           shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47

    termino                        shift and go to state 37
    exp                            shift and go to state 81
    expPrima                       shift and go to state 36
    terminoPrima                   shift and go to state 40
    factor                         shift and go to state 41
    factorPrima                    shift and go to state 42
    factorPrima2                   shift and go to state 44
    cte                            shift and go to state 45

state 63

    (45) expPrima -> termino MINUS . exp
    (43) exp -> . expPrima
    (44) expPrima -> . termino PLUS exp
    (45) expPrima -> . termino MINUS exp
    (46) expPrima -> . termino
    (47) termino -> . terminoPrima
    (48) terminoPrima -> . factor MULTIPLY termino
    (49) terminoPrima -> . factor DIVIDE termino
    (50) terminoPrima -> . factor
    (34) factor -> . factorPrima
    (35) factorPrima -> . OPENP expresion CLOSEP
    (36) factorPrima -> . factorPrima2
    (37) factorPrima -> . PLUS factorPrima2
    (38) factorPrima -> . MINUS factorPrima2
    (39) factorPrima2 -> . ID
    (40) factorPrima2 -> . cte
    (41) cte -> . CTEINT
    (42) cte -> . CTEFLOAT

    OPENP           shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    ID              shift and go to state 33
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 47
